--- a/frontend/index.html
+++ b/frontend/index.html
@@ -85,6 +85,9 @@
                     <button class="btn-secondary" id="playOriginalBtn" disabled>
                         <span class="btn-emoji">▶️</span> Play
                     </button>
+                    <button class="btn-secondary" id="downloadOriginalBtn" disabled>
+                        <span class="btn-emoji">⬇️</span> Download
+                    </button>
                 </div>
 
                 <div id="analysisResult" class="result-box hidden">
